--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 MONGO_URI='<Connectionn String>'
-SECRET_KEY='<Secret Key>'
+SECRET_KEY='asbhjdbn'
+
+GOOGLE_CLIENT_ID = "448293494923-c2br0k8pfc6u34l5uk78splu7joeqrnc.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
