fixed review imports

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MONGO_URI='<Connectionn String>'
-SECRET_KEY='<my secret key>'
+SECRET_KEY='<My Secret Key>'
 
-GOOGLE_CLIENT_ID = "<google id>"
-GOOGLE_CLIENT_SECRET = "google secret key"
+GOOGLE_CLIENT_ID = '<Google ClientId>'
+GOOGLE_CLIENT_SECRET = '<Google Secret Key>'
